@@ -80,9 +80,18 @@ makedummies(dat)
 
 ## factors
 dat <- data.frame(
-x = factor(rep(c("a", "b", "c"), each = 3)),
-y = factor(rep(1:3, each = 3))
+    x = factor(rep(c("a", "b", "c"), each = 3)),
+    y = factor(rep(1:3, each = 3))
 )
+makedummies(dat)
+
+## data including NA
+
+dat <- data.frame(
+    x = factor(rep(c("a", "b", "c"), each = 3)),
+    y = rep(1:3, each = 3)
+)
+dat$x[4] <- NA; dat$y[6] <- NA
 makedummies(dat)
 
 ## "col" option
