@@ -1,6 +1,7 @@
 Changes to version 1.2.0.9000
 - fix bug
   - column names are broken using non-standard name in tibble
+  - makedummies() converts 'NA' to '0'
 
 Changes to version 1.2.0
 - add S3 methods
